cmake_minimum_required(VERSION 3.0.0)
project(day1 VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
add_executable(day1 src/day1.cpp)
target_link_libraries(day1 ${CURSES_LIBRARIES})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
